Adjusts some mobile styles, adds a new menu icon on mobile, and I noticed some search results had been weird so fixed them

--- a/style.css
+++ b/style.css
@@ -45,7 +45,7 @@ main .featured-image {
 }
 
 article footer {
-	margin-bottom: 1em;
+	margin-bottom: 3em;
 }
 
 @media screen and (max-width: 1196px) {
@@ -273,6 +273,7 @@ main .two aside {
 	.admin-bar .main-menu {
 		top: 32px;
 	}
+
 }
 
 @media screen and (max-width: 1046px) {
@@ -374,6 +375,14 @@ main .two aside {
 		top: 30px;
 		right: 20px;
 		position: absolute;
+	}
+
+	.single main > section {
+		margin-top: 0;
+	}
+
+	.home main h1 {
+		padding-top: 0;
 	}
 }
 
@@ -613,6 +622,34 @@ main .two aside {
 	}
 }
 
+.archive .article-thumbnail,
+.search .article-thumbnail {
+	float: left;
+	margin-right: 1em;
+}
+
+.archive h2.article-title,
+.search h2.article-title {
+	padding-bottom: 0;
+}
+
+.archive .article-header hgroup.source,
+.search .article-header hgroup.source {
+	padding-bottom: 2em;
+}
+
+
+.search article.wsuwp_uc_person {
+	min-height: 160px;
+	border-bottom: 1px solid rgba(127, 127, 127, .2);
+	padding: 1em 0;
+}
+
+.search article.wsuwp_uc_person:last-of-type {
+	border-bottom: 0;
+}
+
+.search section,
 .archive section {
 	margin-top: 7em;
 }
